@@ -1,7 +1,7 @@
 --- a/cpp/CMakeLists.txt
 +++ b/cpp/CMakeLists.txt
-@@ -113,7 +113,7 @@
- set(ARROW_LLVM_VERSIONS
+@@ -158,7 +158,7 @@
+     "14.0"
      "13.0"
      "12.0"
 -    "11.1"
