@@ -1,6 +1,11 @@
+Author: Diane Trout <diane@ghic.org>
+Description: Override upstreams downloading, vendoring, and static
+ compliation of xsimd in favor of using the Debian library.
+Forwarded: no
+
 --- a/cpp/cmake_modules/ThirdpartyToolchain.cmake
 +++ b/cpp/cmake_modules/ThirdpartyToolchain.cmake
-@@ -638,21 +638,6 @@
+@@ -840,21 +840,6 @@
    )
  endif()
  
@@ -22,7 +27,7 @@
  
  if(DEFINED ENV{ARROW_ZSTD_URL})
    set(ZSTD_SOURCE_URL "$ENV{ARROW_ZSTD_URL}")
-@@ -2017,23 +2002,25 @@
+@@ -2370,25 +2355,8 @@
  endif()
  
  macro(build_xsimd)
@@ -31,35 +36,20 @@
 -  set(XSIMD_CMAKE_ARGS ${EP_COMMON_CMAKE_ARGS} "-DCMAKE_INSTALL_PREFIX=${XSIMD_PREFIX}")
 -
 -  externalproject_add(xsimd_ep
--                      ${EP_LOG_OPTIONS}
+-                      ${EP_COMMON_OPTIONS}
 -                      PREFIX "${CMAKE_BINARY_DIR}"
 -                      URL ${XSIMD_SOURCE_URL}
 -                      URL_HASH "SHA256=${ARROW_XSIMD_BUILD_SHA256_CHECKSUM}"
 -                      CMAKE_ARGS ${XSIMD_CMAKE_ARGS})
 -
 -  set(XSIMD_INCLUDE_DIR "${XSIMD_PREFIX}/include")
+-  # The include directory must exist before it is referenced by a target.
+-  file(MAKE_DIRECTORY "${XSIMD_INCLUDE_DIR}")
 -
 -  add_dependencies(toolchain xsimd_ep)
 -  add_dependencies(toolchain-tests xsimd_ep)
 -
 -  set(XSIMD_VENDORED TRUE)
-+#  message(STATUS "Building xsimd from source")
-+#  set(XSIMD_PREFIX "${CMAKE_CURRENT_BINARY_DIR}/xsimd_ep/src/xsimd_ep-install")
-+#  set(XSIMD_CMAKE_ARGS ${EP_COMMON_CMAKE_ARGS} "-DCMAKE_INSTALL_PREFIX=${XSIMD_PREFIX}")
-+#
-+#  externalproject_add(xsimd_ep
-+#                      ${EP_LOG_OPTIONS}
-+#                      PREFIX "${CMAKE_BINARY_DIR}"
-+#                      URL ${XSIMD_SOURCE_URL}
-+#                      URL_HASH "SHA256=${ARROW_XSIMD_BUILD_SHA256_CHECKSUM}"
-+#                      CMAKE_ARGS ${XSIMD_CMAKE_ARGS})
-+#
-+#  set(XSIMD_INCLUDE_DIR "${XSIMD_PREFIX}/include")
-+#
-+#  add_dependencies(toolchain xsimd_ep)
-+#  add_dependencies(toolchain-tests xsimd_ep)
-+#
-+#  set(XSIMD_VENDORED TRUE)
 +   set(xsimd_SOURCE "SYSTEM")
 +   find_package(xsimd)
  endmacro()
