@@ -12,6 +12,7 @@ apache-arrow (15.0.2-1) UNRELEASED; urgency=medium
   * Remove pytest-runner, pytest-lazy-fixture from Build-Depends
     no longer used by upstream
   * Update .install files for changed paths
+  * Refresh patches
 
  -- Diane Trout <diane@ghic.org>  Thu, 04 Apr 2024 17:08:52 -0700
 
